# kdecoration-viewer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Messages.sh  main.cpp  previewbridge.cpp  previewbridge.h  previewclient.cpp  previewclient.h  previewitem.cpp  previewitem.h  previewsettings.cpp  previewsettings.h
src/qml/: CanvasSettings.qml  ClientSettings.qml  DecorationPreview.qml  DecorationSettings.qml  main.qml
